--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.7.2",
     "@tanstack/react-query": "^5.49.2",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
