--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
+    "fix": "turbo lint -- --fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "dev:web": "dotenv -e .env.local -- turbo dev --filter=web",
     "build:web": "dotenv -e .env -- turbo build --filter=web",
@@ -32,8 +33,8 @@
   },
   "devDependencies": {
     "@simpang/eslint-config": "*",
-    "@simpang/typescript-config": "*",
     "@tanstack/eslint-plugin-query": "^5.49.1",
+    "@simpang/typescript-config": "*",
     "@tanstack/react-query-devtools": "^5.49.2",
     "dotenv-cli": "^7.4.2",
     "prettier": "^3.2.5",
